--- a/index-24.html
+++ b/index-24.html
@@ -7,6 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+    crossorigin="anonymous"
+    /> 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/style-24.css">
     <title>JavaScriptmas | Challenge 24</title>
@@ -62,6 +68,12 @@
         <h4 id="result"></h4>
         <br>
         <button id="replay" class="hide">Replay</button>
+        <br><hr><br>
+        <div class="prev-arrow-23">
+            <button class="arrow-btn-23" onclick="window.location.href='index-23.html'">
+                <i class="fas fa-chevron-left"></i> Previous
+            </button>
+        </div>
     </main>
     <script type="text/javascript" src="assets/js/script.js"></script>
     <script src="assets/js/script-24.js"></script>
